# site

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/esite_v2/: manage.py
app/esite_v2/esite_v2/: asgi.py  settings.py  urls.py  wsgi.py
app/esite_v2/tyytiki/: apps.py  models.py  urls.py  views.py
app/esite_v2/tyytiki/migrations/: 0001_initial.py
app/esite_v2/tyytiki/static/tyytiki/css/: main.css
app/esite_v2/tyytiki/static/tyytiki/js/: app.js
app/esite_v2/tyytiki/templates/tyytiki/: about.html  base.html  products.html
esite_v2/: manage.py
esite_v2/esite_v2/: asgi.py  settings.py  urls.py  wsgi.py
esite_v2/tyytiki/static/tyytiki/css/: main.css
esite_v2/tyytiki/templates/tyytiki/: about.html  base.html  index.html  products.html
