[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["Dmitry Korolev <KorolevDA@dialog-regions.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
